fix:fix bug overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,8 @@
 }
 
 body {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
+    width: 100%;
 }
 
 .poppins-regular {
